--- a/js/layout.css
+++ b/js/layout.css
@@ -39,7 +39,7 @@ header{
 .header-cont{
     float: left;
     width: 20%;
-    margin-left: 2%;
+    margin-left: 1%;
     text-align: center;
 }
 button{
@@ -58,14 +58,17 @@ footer{
 .card-2nd{
     box-shadow: 0 4px 8px 0 rgba(0.2,0.2,0.2,0.4);
     transition: 0.3s;
-    width: 20%;
+    width: 25%;
     height: 470px;
     text-align: center;
     padding: 1%;
     margin: 1.5%;
+    box-sizing: border-box;
+    flex: 1 0 21%; /* explanation below */
 }
 
 #senContent{
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 }
